--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,18 @@
 name: damath
 description: math extension for dart.
-version: 0.0.6
+version: 0.0.7
 repository: https://github.com/nomagicisreal/damath
 
 environment:
   sdk: ^3.2.5
 
 dependencies:
-  # path: ^1.8.0
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
   lints: ^2.1.0
   test: ^1.24.0
