--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: damath
 description: math extension for dart.
-version: 0.0.8
+version: 0.0.9
 repository: https://github.com/nomagicisreal/damath
 
 environment:
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -16,3 +17,6 @@ dev_dependencies:
 
   lints: ^2.1.0
   test: ^1.24.0
+
+flutter:
+  uses-material-design: true
