--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: damath
-description: math extension for dart.
-version: 0.0.15
+description: math collection for dart.
+version: 0.0.16
 repository: https://github.com/nomagicisreal/damath
 
 environment:
