--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,15 @@
 name: damath
 description: math collection for dart.
-version: 0.0.26
+version: 0.0.27
 repository: https://github.com/nomagicisreal/damath
 
 environment:
   sdk: ^3.2.5
 
 dependencies:
-  flutter:
-    sdk: flutter
+  collection: ^1.19.1
   vector_math: ^2.1.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   lints: ^5.0.0
   test: ^1.24.0
-
-flutter:
-  uses-material-design: true
