--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -19,6 +19,7 @@ linter:
   rules:
     constant_identifier_names: false
     non_constant_identifier_names: false
+    curly_braces_in_flow_control_structures: false
 
 # analyzer:
 #   exclude:
